Add card section for global movement with image and description

--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
       <div class="cards">
         <!-- Card with an image -->
         <div class="card">
-      
-        </div>
-        </h3>Join a Global Movement</h3>
-      
-          <p>Lead a foundation with global impact and measurable outcomes.</p>
+          <h3>Join a Global Movement</h3>
+          <div class="card-image">
+            <!-- Image showing clean drinking water -->
+            <img src="https://th.bing.com/th/id/OIP.XkUmUNFOAojVzUbsRF45ogHaE8?rs=1&pid=ImgDetMain" alt="Clean Drinking Water">
+          </div>
+          <div class="card-content">
+            <p>Lead a foundation with global impact and measurable outcomes.</p>
         </div>
         <div class="card">
           <h3>💬 Join</h3>
